--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
 
 
   <title>I'm hungry</title>
-  <base href="/">
+  <!--<base href="/">-->
+  <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
